# AIClub-WebApp

./: .gitignore
.github/workflows/: projects-api-ci.yml
apps/backend/: .gitignore  requirements.txt  whiteboard.db
apps/club-api/: .env.example  .gitignore  pyproject.toml
apps/club-api/app/: config.py  database.py  main.py  response.py
apps/club-api/app/api/v1/: chat.py  events.py  ideas.py  jokes_facts.py  members.py  prompt_lab.py  requests.py  sackbot.py
apps/club-api/app/models/: __init__.py  chat.py  event.py  idea.py  joke_fact.py  member.py  request.py  sackbot.py
apps/club-api/app/schemas/: chat.py  event.py  idea.py  joke_fact.py  member.py  prompt_lab.py  request.py  sackbot.py
apps/club-api/app/services/: chat_service.py  event_service.py  idea_service.py  joke_fact_service.py  member_service.py  prompt_lab_service.py  request_service.py  sackbot_service.py
apps/club-api/tests/: conftest.py  test_chat.py  test_events.py  test_ideas.py  test_jokes_facts.py  test_members.py  test_prompt_lab.py  test_requests.py  test_sackbot.py
apps/frontend/: index.html  package-lock.json  (+2 more)
apps/projects-api/: .env  .env.example  Dockerfile  pyproject.toml
apps/projects-api/app/: __init__.py  config.py  database.py  main.py
apps/projects-api/app/api/v1/: projects.py
apps/projects-api/app/models/: project.py
apps/projects-api/app/schemas/: project.py
apps/projects-api/app/services/: project_service.py
docs/: Architecture.md  COMPREHENSIVE-PLAN.md  ONBOARDING.md  README.md  api-contract.md  auth-permissions.md  backend-architecture.md  component-library.md  deployment.md  frontend-architecture.md  performance-budgets.md  plan.md  testing-strategy.md
infra/: docker-compose.yml
(+54 files in other folders)
